tests/kiama/negative/type_errors/L1/4_const2.ob
MODULE const;

CONST    
    aconst = 2 DIV (3 DIV 4);

END const.
